--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,32 @@
 			<artifactId>hsqldb</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<exclusions>
+		  <exclusion>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+		  </exclusion>
+		</exclusions>
+	</dependency>
 
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+	</dependency>
+ <!-- LogBack dependencies -->
+    <dependency>
+    	<groupId>ch.qos.logback</groupId>
+    	<artifactId>logback-classic</artifactId>
+    </dependency>
+    <dependency>                                    
+    	<groupId>org.slf4j</groupId>                
+    	<artifactId>jcl-over-slf4j</artifactId>     
+    </dependency>
+  
 	</dependencies>
 
 	<build>
