--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 logging:
-  level.org.springframework: INFO
+  level.org.springframework: DEBUG
 spring:
   datasource:
     url: jdbc:hsqldb:mem:dataSource
