--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,10 @@ spring:
     url: jdbc:hsqldb:mem:dataSource
     username: sa
     password:
+    continue-on-error: true
     hikari:
       maximum-pool-size: 2
+     
 ---
 spring:
   profiles: local
@@ -15,12 +17,14 @@ spring:
     url: jdbc:mysql://localhost:3306/quiz
     username: root
     password: root
+   
   jpa:
     show-sql: true
     generate-ddl: true
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate:
-      ddl-auto: udpate
-      dialect: org.hibernate.dialect.MySQL5Dialect
-      
+      ddl-auto: create
+
+       
       
       
